--- a/Client/package.json
+++ b/Client/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.5",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1"
+    "react-router": "^7.5.1",
+    "react-router-dom": "^7.4.1",
+    "router": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -28,7 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.1",
+    "tailwindcss": "^3.4.1",
     "vite": "^6.2.0"
   }
 }
