--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "laravel-echo": "^2.1.4",
+    "lucide-react": "^0.511.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
