--- a/Servidor/package.json
+++ b/Servidor/package.json
@@ -9,12 +9,11 @@
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.1.7",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.21",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "laravel-echo": "^1.19.0",
         "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.5.3",
-        "tailwindcss": "^3.4.17",
+        "pusher-js": "^8.4.0",
         "vite": "^6.0.11"
     }
 }
